If told to via the config (as it will by default), E-UrlWatch will watch
that file, and will strip out new urls and allow you to view them at the
touch of a button. (Or automatically if you specify). It'll also perform a
configurable command (I use it to play a sound) when a new URL appears.

Other misc cleanups have taken place, and I have very carefully hidden a
couple of juicy bugs. Find them for me, and you win a prize ;)

-------------------------------------------------------------------------------

Sat Nov 26 00:48:19 GMT 1999
(gilbertt)

Added a groovy new noise for E-UrlWatch to make when a new URL is found.
Coolness. Now supports TE ootb.

-------------------------------------------------------------------------------

Sat Nov 27 14:39:57 EST 1999
(StriderZ)

You can paste to textboxes now....whoopty d00.

-------------------------------------------------------------------------------

Sat Nov 27 16:18:55 EST 1999
(StriderZ)

Textbox bugfixes (I hope), thanks for bitching, guys *ducks*

-------------------------------------------------------------------------------

Sun Nov 28 01:12:11 GMT 1999
(gilbertt)

Added some help dox for E-UrlWatch.

-------------------------------------------------------------------------------

Sun Nov 28 20:04:45 GMT 1999
(gilbertt)

Fixed some overzealous free()ing (no checks) in Epplet_gadget_destroy()

-------------------------------------------------------------------------------

Sun Nov 28 21:06:21 GMT 1999
(gilbertt)

Added a popup containing a history of the urls you launch, of the urls found
in the file being watched. This is cool :)

-------------------------------------------------------------------------------

Sun Nov 28 21:52:12 GMT 1999
(gilbertt)

Made the screensaver lock command configurable in E-ScreenSave.

-------------------------------------------------------------------------------

Mon Nov 29 01:08:58 GMT 1999
(gilbertt)

Hrm. A segfault with a certain form of url. Fixed.
